# HammingIPv6Scanner

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cmdline.h  de_alias.py  fruit_targets_generate.cpp  generate_one_file.py  hamming  hamming.cpp  pattern_gloabal.txt  targets_generate  targets_generate.cpp
